# cookiecutter-caf

./: LICENSE  README.md  cookiecutter.json  local_extensions.py
.github/workflows/: build.yml  generate.yml
hooks/: post_gen_project.py  pre_prompt.py
{{ cookiecutter.project_slug }}/: .gitignore  CONTRIBUTING.rst  README.md  RELEASE.md  pyproject.toml  requirements_dev.txt
{{ cookiecutter.project_slug }}/.github/: dependabot.yml  pull_request_template.md
{{ cookiecutter.project_slug }}/.github/workflows/: black.yml  build.yml  documentation-links.yml  isort.yml  linting.yml  tests.yml  typing.yml
{{ cookiecutter.project_slug }}/docs/: requirements.txt
{{ cookiecutter.project_slug }}/docs/source/: .gitignore  api.rst  conf.py  index.rst  start.rst  tutorial.rst  user_guide.rst
{{ cookiecutter.project_slug }}/docs/source/_templates/autosummary/: base.rst  class.rst
{{ cookiecutter.project_slug }}/docs/source/usage/: index.rst
{{ cookiecutter.project_slug }}/examples/: GALLERY_HEADER.rst  example.py  run_example.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.__pkg_folder }}/: __init__.py  _version.py  isort_fail.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.__pkg_name }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_example.py
